--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ input {
   background-color: white;
 }
 
-.celcius {
+.celcius{
   Float:right;
   background-color: #d4e2d4;
   border-radius: 4px;
@@ -51,13 +51,15 @@ input {
   padding: 10px;
   border-width: 0px;
   margin-right: 8px;
+  --bs-link-color: #df7861;
 }
 
 .celcius:hover {
   background-color: white;
 }
 
-.fahrenheit {
+
+.fahrenheit{
   Float:left;
   background-color: #d4e2d4;
   border-radius: 4px;
@@ -65,9 +67,17 @@ input {
   transition: ease-in-out;
   padding: 10px;
   border-width: 0px;
+  margin-right: 8px;
+  --bs-link-color: #df7861;
+  
 }
 
 .fahrenheit:hover {
+  background-color: white;
+}
+
+
+.units:hover {
   background-color: white;
 }
 
@@ -155,4 +165,21 @@ h2 {
 
 footer {
   font-size: 10px;
+}
+
+a:link {
+text-decoration: none;
+}
+
+a:visited {
+text-decoration: none;
+}
+
+a:hover {
+text-decoration: none;
+color: #df7861;
+}
+
+a:active{
+text-decoration: none;
 }
