--- a/src/styles.css
+++ b/src/styles.css
@@ -77,8 +77,8 @@ input {
 }
 
 
-.units:hover {
-  background-color: white;
+.unit {
+font-size: 12px;
 }
 
 .afterSearch {
@@ -142,7 +142,7 @@ h1 {
 h2 {
   text-align: center;
   margin-bottom: 5px;
-  font-size: 15px;
+  font-size: 13px;
 }
 
 .dateformat {
@@ -165,6 +165,9 @@ h2 {
 
 footer {
   font-size: 10px;
+  background-color: #df7861;
+  text-align: center;
+  padding-bottom: 30px;
 }
 
 a:link {
