--- a/src/styles.css
+++ b/src/styles.css
@@ -110,14 +110,22 @@ h1 {
 
 .description {
   text-align: center;
-  font-size: 10px;
-  padding-bottom: 20px;
+  font-size: 12px;
+  margin-top: -10px;
+  text-transform:capitalize;
 }
 
-.feelsLike {
+.wind {
   text-align: center;
-  font-size: 10px;
+  font-size: 12px;
+  margin-top: -10px;
+}
+
+.humidity {
+  text-align: center;
+  font-size: 12px;
   padding-bottom: 20px;
+  margin-top: -15px;
 }
 
 .temperature {
@@ -132,7 +140,6 @@ h1 {
 }
 
 .forecast {
-  background-color: #fcf8e8d2;
   text-align: center;
   color: #df7861;
   padding-bottom: 7px;
@@ -170,6 +177,7 @@ footer {
   background-color: #df7861;
   text-align: center;
   padding-bottom: 30px;
+  padding-top: 30px;
 }
 
 a:link {
